--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
+  shared_preferences: ^0.5.2
   printing: ^2.0.0
   pdf: ^1.3.7
 
