--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -21,8 +21,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   shared_preferences: ^0.5.2
-  printing: ^2.0.0
-  pdf: ^1.3.7
+#  printing: ^2.0.0
+#  pdf: ^1.3.7
+  charts_flutter: ^0.8.1
 
 dev_dependencies:
   flutter_test:
